Don't call DocumentAnimations::UpdateAnimations when in print mode

When in print mode, we don't do 'normal' visual output; painting is done
explicitly to a special output canvas. As such, there is little point in
doing composited animation updates, as we will not be showing the result.

This also fixes a DCHECK in BlinkGenPropertyTrees/SPv2 mode, where paint
was skipped but DocumentAnimations::UpdateAnimations wasn't - this caused
UpdateAnimations to fail its DCHECK for the expected lifecycle state.

Bug: 842937
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: If8a0e11bd25e931dd02434e18ec90a02c4e8f9e1
Reviewed-on: https://chromium-review.googlesource.com/1066405
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560815}
Former-commit-id: c56f92254ed07045e6a0175bde6efe9dfe8635a6